# Switchboard

./: README.md
components/battery/: CMakeLists.txt  Kconfig  battery_manager.c  battery_manager.h  battery_task.c  battery_task.h  cpu_temp_sensor.c  cpu_temp_sensor.h
components/event_manager/: CMakeLists.txt  Kconfig  event_manager.c  event_manager.h
components/global/: CMakeLists.txt  Kconfig  common.h
components/logger/: CMakeLists.txt  logger.h
components/message_task/: CMakeLists.txt  Kconfig  message_manager.c  message_manager.h  message_task.c  message_task.h
components/mqtt_task/: CMakeLists.txt  Kconfig  mqtt_driver.c  mqtt_driver.h  mqtt_task.cpp  mqtt_task.h
components/putrl_proto/: CMakeLists.txt
components/queue_types_manager/: CMakeLists.txt  queue_packet.h  queue_types_manager.c  queue_types_manager.h
components/switch_task/: CMakeLists.txt  Kconfig  switch.h  switch_manager.cpp  switch_manager.h  switch_task.cpp  switch_task.h
components/ui_task/: CMakeLists.txt  Kconfig  buzzer_handler.cpp  buzzer_handler.h  led_handler.c  led_handler.h  ui_task.cpp  ui_task.h
components/wifi_task/: CMakeLists.txt  Kconfig  ntp_driver.c  ntp_driver.h  wifi_driver.c  wifi_driver.h  wifi_task.cpp  wifi_task.h
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
